# fx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  fly.toml  justfile  wrangler.toml
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yml  ci.yml
fx/: Cargo.toml
fx-auth/: Cargo.toml
fx-auth/src/: lib.rs
fx-rss/: Cargo.toml
fx-rss/src/: lib.rs
fx-server/: Cargo.toml  README.md
fx-server/src/: main.rs
fx-worker/: Cargo.toml  README.md  package.json  wrangler.toml
fx-worker/src/: lib.rs
fx/src/: ap.rs  api.rs  blogroll.rs  data.rs  discovery.rs  files.rs  health.rs  html.rs  lib.rs  log.rs  main.rs  md.rs  search.rs  serve.rs  settings.rs  trigger.rs
fx/src/static/: katex.js  nodefer.js  script.js  style.css
fx/tests/: api_integration.rs  common.rs  connection_test.rs  integration.rs
migrations/: 0001_schema.sql
src/: auth.rs  data.rs  html.rs  lib.rs  main.rs  serve.rs
src/static/: style.css
tests/: integration.rs
