[package]
name = "fx"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5.3"
axum = { version = "0.8", features = ["form"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
http-body-util = "0.1.3"
indoc = "2"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
subtle = "2.6.1"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
pretty_assertions = "1"
