[workspace]
resolver = "2"
members = [
    "fx",
    "fx-auth",
    "fx-rss",
]

[workspace.package]
version = "1.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/rikhuijzer/fx"

[profile.dev]
debug = 0
strip = "debuginfo"
split-debuginfo = "unpacked"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
