[package]
name = "fx-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[dependencies]
aes-gcm-siv = "0.12.0-rc.2"
argon2 = { version = "0.6.0-rc.2", features = ["getrandom"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
subtle = "2.6.1"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
