[package]
name = "fx-rss"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[dependencies]
atom_syndication = "0.12"
chrono = { version = "0.4.40", default-features = false }
diligent-date-parser = "0.1.5"
futures = { version = "0.3.31", default-features = false }
http = "1"
regex = "1.11"
reqwest = "0.13"
rss = "2.0.11"
