[package]
name = "fx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
publish = false

[dependencies]
axum = { version = "0.8", features = ["form", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
fx-auth = { path = "../fx-auth" }
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = "1.6.0"
indoc = "2"
markdown = { version = "1.0.0-alpha.23", features = ["serde"] }
regex = "1.11"
rusqlite = { version = "0.35", features = ["blob", "bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tower = "0.5"
reqwest = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
xz2 = "0.1"

[dev-dependencies]
pretty_assertions = "1"
